updating html structure

--- a/styles.css
+++ b/styles.css
@@ -2,8 +2,8 @@
 @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap");
 
 * {
-  padding: 0;
   margin: 0;
+  padding: 0;
   box-sizing: border-box;
   font-family: "Poppins", sans-serif;
 }
@@ -14,22 +14,21 @@ body {
   justify-content: center;
   padding: 0 10px;
   min-height: 100vh;
-  background-color: #06283d;
+  background: #06283d;
 }
 
 .container {
   max-width: 690px;
-  background: #fff;
   width: 100%;
   padding: 30px;
-  border-radius: 10px;
-  box-shadow: 0 10px 20px rgba(0, 0, 0, 0.1);
+  background: #fff;
+  border-radius: 7px;
+  box-shadow: 0 10px 20px rgba(0, 0, 0, 0.01);
 }
 
 .wrapper {
-  border-radius: 8px;
+  border-radius: 5px;
   border: 1px solid #ccc;
-  padding: 20px;
 }
 
 .wrapper .text-input {
@@ -39,4 +38,45 @@ body {
 
 .text-input .to-text {
   border-radius: 0px;
+  border-left: 1px solid #ccc;
+}
+
+.text-input textarea {
+  height: 250px;
+  width: 100%;
+  border: none;
+  outline: none;
+  resize: none;
+  background: none;
+  font-size: 18px;
+  padding: 10px 15px;
+  border-radius: 5px;
+}
+
+.text-input textarea::placeholder {
+  color: #b7b6b6;
+}
+
+.controls,
+li,
+.icons,
+.icons i {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.controls {
+  list-style: none;
+  padding: 12px 15px;
+}
+
+.controls .row .icons {
+  width: 38%;
+}
+
+.controls .row .icons i {
+  width: 50px;
+  color: #adadad;
+  padding: 10px;
 }
