--- a/styles.css
+++ b/styles.css
@@ -14,7 +14,7 @@ body {
   justify-content: center;
   padding: 0 10px;
   min-height: 100vh;
-  background: #559591;
+  background: #386a47;
 }
 
 .container {
@@ -145,10 +145,9 @@ li,
   border: none;
   color: #fff;
   cursor: pointer;
-  margin-top: 20px;
   font-size: 17px;
   border-radius: 5px;
-  background: #59aba7;
+  background: #386a47;
 }
 
 @media (max-width: 660px) {
@@ -187,16 +186,11 @@ li,
   }
 }
 
-.language-title {
+.translator-title {
   /* center the title above the div below it  */
   text-align: center;
-  color: #fff;
-}
-
-.lanaguge-header {
-  /* center the div */
-  text-align: center;
-  /* add some space below the div */
-  padding: 20px;
-  color: #fff;
+  color: rgb(63, 63, 63);
+  font-size: 20px;
+  font-weight: 500;
+  margin-bottom: 15px;
 }
